# ProctoringAI

./: .gitignore  data_collector.py  inference.py  main.py  pyproject.toml  train_model.py
